<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>


  <!-- The Basics -->
  <groupId>org.impotch</groupId>
  <artifactId>util</artifactId>
  <version>1.1.8-snapshot</version>
  <packaging>jar</packaging>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>${junit.jupiter.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>${assertj.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>25</maven.compiler.release>
    <junit.jupiter.version>6.0.2</junit.jupiter.version>
    <assertj.version>3.27.7</assertj.version>

    <maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
    <maven-jar-plugin.version>3.5.0</maven-jar-plugin.version> <!-- 15/11/2025 -->
    <maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version> <!-- 10/09/2025 -->
    <jacoco-maven-plugin.version>0.8.14</jacoco-maven-plugin.version> <!-- 11/10/2025 -->

    <maven-site-plugin.version>3.21.0</maven-site-plugin.version> <!-- 22/10/2024 -->
    <maven-project-info-reports-plugin.version>3.9.0</maven-project-info-reports-plugin.version> <!-- 26/02/2025 -->
    <maven-javadoc-plugin.version>3.12.0</maven-javadoc-plugin.version> <!-- 21/09/2025 -->
    <maven-jxr-plugin.version>3.6.0</maven-jxr-plugin.version> <!-- 25/10/2024 -->
    <jacoco-maven-plugin.version>0.8.14</jacoco-maven-plugin.version> <!-- 11/10/2025 -->
    <maven-surefire-report-plugin.version>3.5.4</maven-surefire-report-plugin.version> <!-- 10/09/2025 -->
    <maven-pmd-plugin.version>3.28.0</maven-pmd-plugin.version>
    <maven-checkstyle-plugin.version>3.6.0</maven-checkstyle-plugin.version> <!-- 25/10/2024 -->

  </properties>

  <!-- Build Settings -->
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>${maven-jar-plugin.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco-maven-plugin.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
        <version>${maven-site-plugin.version}</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-report-plugin</artifactId>
        <version>${maven-surefire-report-plugin.version}</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-project-info-reports-plugin</artifactId>
        <version>${maven-project-info-reports-plugin.version}</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>${maven-javadoc-plugin.version}</version>
        <configuration>
          <show>package</show>
          <charset>${project.build.sourceEncoding}</charset>
          <docfilessubdirs>true</docfilessubdirs>
          <links>
            <!-- JSE -->
            <link>https://docs.oracle.com/en/java/javase/${maven.compiler.release}/docs/api/</link>
            <!-- Libraries -->
            <link>https://docs.junit.org/${junit.jupiter.version}/api/</link>
            <link>https://www.slf4j.org/apidocs/</link>
          </links>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
        <version>${maven-pmd-plugin.version}</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>${maven-checkstyle-plugin.version}</version>
        <configuration>
          <configLocation>google_checks.xml</configLocation>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jxr-plugin</artifactId>
        <version>${maven-jxr-plugin.version}</version>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco-maven-plugin.version}</version>
      </plugin>
    </plugins>
  </reporting>

  <!-- More Project Information -->
  <name>util</name>
  <url>https://github.com/pgiroud/util/wiki</url>
  <licenses>
    <license>
      <name>GNU General Public License (GPL)</name>
      <url>https://www.gnu.org/licenses/gpl.txt</url>
    </license>
  </licenses>

  <!-- Environment Settings -->
  <scm>
    <connection>scm:git:git@github.com:pgiroud/util.git</connection>
    <url>scm:git:git@github.com:pgiroud/util.git</url>
    <developerConnection>scm:git:git@github.com:pgiroud/util.git</developerConnection>
  </scm>
</project>
